Fix z-index

--- a/assets/_theme_minimal.scss
+++ b/assets/_theme_minimal.scss
@@ -94,7 +94,7 @@
     color: $color-control;
     width: $control-size-x;
     height: $control-size-y;
-    z-index: 9999;
+    z-index: 2;
     text-decoration: none !important;
     border: none !important;
     &:hover
