--- a/assets/slider.css
+++ b/assets/slider.css
@@ -129,7 +129,7 @@
     color: white;
     width: 32px;
     height: 48px;
-    z-index: 9999;
+    z-index: 2;
     text-decoration: none !important;
     border: none !important; }
     .bx-wrapper .bx-controls-direction a:hover {
